feat: add debug logging for recommendations and improve score calculation in ContentBasedRecommendationService